feat: openapi doc adding request body
